Making driver expressions time dependent does not update the depsgraph #65451

Closed
opened 2019-06-03 16:04:41 +02:00 by Jacques Lucke · 3 comments
Member

System Information
Operating system: Linux-4.18.0-20-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-03 13:58, hash: d5f6e573ed

Exact steps for others to reproduce the error

  1. On the default cube, type #2 in the location.x field. This will create a simple driver that always evaluates to 2. It does not depend on the current frame.
  2. Change the driver expression from 2 to frame. The expression works, but is not evaluated when the frame changes.
**System Information** Operating system: Linux-4.18.0-20-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-03 13:58, hash: `d5f6e573ed` **Exact steps for others to reproduce the error** 1. On the default cube, type `#2` in the `location.x` field. This will create a simple driver that always evaluates to 2. It does not depend on the current frame. 2. Change the driver expression from `2` to `frame`. The expression works, but is not evaluated when the frame changes.
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Sergey Sharybin was assigned by Jacques Lucke 2019-06-03 16:04:59 +02:00

This issue was referenced by f5f1407a7e

This issue was referenced by f5f1407a7eb643792dfe5dd27fe80da7249f6914

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65451
No description provided.