Fix T65451: Changing driver expression doesn't update relations